--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="cta-notice">We won’t share or use your email address for any other purposes, and you can unsubscribe at any time.</div>
       </form>
     </div>
-    <svg width="1437" height="118" viewBox="0 0 1437 136" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio ="none" class="header-wave">
+    <svg viewBox="0 0 1437 136" class="header-wave">
       <path d="M202 119.5C92.5042 95.3079 1.1878e-05 0.000149075 1.1878e-05 0.000149075L1436.5 0.000152588C1436.5 0.000152588 1137.46 -0.0715593 902.5 40.0002C635.93 85.4624 439.5 171.974 202 119.5Z" fill="#FBEED7"/>
     </svg>
   </header>
