Create animated background

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </div>
   </section>
   <section id="past-events">
+    <object class="background-shapes" data="img/backgroundShapes.svg" type="image/svg+xml"></object>
     <div class="container">
       <h2>Past events</h2>
       <article class="past-event">
