Hook up contact form to netlify

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container">
       <h2>Contribute</h2>
       <p class="contribute-message">We are always looking for <b>sponsors</b> and <b>speakers</b> for our next events. You can also join the <b>organising team</b> to help set up the meetups. If you would like to contribute, please get in touch with us.</p>
-      <form action="">
+      <form name="contact-form" netlify>
         <div class="contact-form">
             <div class="name-wrapper">
                 <label for="name" class="contact-label">Your name (required)</label>
