Update background shapes animation

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="email-wrapper">
                 <label for="email" class="contact-label">Your email (required)</label>
-                <input type="text" id="email" class="contact-field" placeholder="charles.michel@premier.fed.be">
+                <input type="text" id="email" class="contact-field" placeholder="charles.michel@ex-premier.fed.be">
             </div>
             <div class="message-wrapper">
                 <label for="message" class="contact-label">Your message (required)</label>
