Change headings font and h2 styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Sansita" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|IBM+Plex+Serif" rel="stylesheet">
 </head>
 
 <body>
@@ -41,19 +41,25 @@
   </header>
   <section id="next-event">
     <div class="container">
-        <h2>Next event</h2>
+        <div class="title-wrapper">
+          <h2>Next event</h2>
+        </div>
         <h3>To be announced</h3>
         <p>Subscribe to our mailing list to be notified as soon as the event is announced !</p>
     </div>
   </section>
   <section id="past-events">
     <div class="container">
-      <h2>Past events</h2>
+      <div class="title-wrapper">
+        <h2>Past events</h2>
+      </div>
     </div>
   </section>
   <section id="contribute">
     <div class="container">
-      <h2>Contribute</h2>
+      <div class="title-wrapper">
+        <h2>Contribute</h2>
+      </div>
       <p class="contribute-message">We are always looking for <b>sponsors</b> and <b>speakers</b> for our next events. You can also join the <b>organising team</b> to help set up the meetups. If you would like to contribute, please get in touch with us.</p>
       <form action="">
         <div class="contact-form">
