User classes instead of IDs & remove max-width on paragraphs

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>Subscribe to our mailing list to be notified as soon as the event is announced !</p>
     </div>
   </section>
-  <section id="past-events">
+  <section id="past-events" class="past-events">
     <div class="container">
       <div class="title-wrapper">
         <h2>Past events</h2>
@@ -84,7 +84,7 @@
       <path fill="white" d="M0,0v58h1440V0c0,0-257.63,58-759.85,58C177.93,58,0,0,0,0z"/>
     </svg>
   </section>
-  <section id="contribute">
+  <section id="contribute" class="contribute">
     <div class="container">
       <div class="title-wrapper">
         <h2>Contribute</h2>
