--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         </div>
       </article>
     </div>
+    <canvas class="background-shapes"></canvas>
     <svg viewBox="0 0 1440 58" preserveAspectRatio="none" class="background-wave background-wave--past">
       <path fill="white" d="M0,0v58h1440V0c0,0-257.63,58-759.85,58C177.93,58,0,0,0,0z"/>
     </svg>
@@ -109,6 +110,8 @@
       </form>
     </div>
   </section>
+
+  <script src="backgroundShapes.js"></script>
 </body>
 
 </html>
