Add missing name attributes

--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
         <div class="contact-form">
             <div class="name-wrapper">
                 <label for="name" class="contact-label">Your name (required)</label>
-                <input type="text" required id="name" class="contact-field" placeholder="Charles Michel">
+                <input type="text" required id="name" name="name" class="contact-field" placeholder="Charles Michel">
             </div>
             <div class="email-wrapper">
                 <label for="email" class="contact-label">Your email (required)</label>
-                <input type="email" required id="email" class="contact-field" placeholder="charles.michel@premier.fed.be">
+                <input type="email" required id="email" name="email" class="contact-field" placeholder="charles.michel@premier.fed.be">
             </div>
             <div class="message-wrapper">
                 <label for="message" class="contact-label">Your message (required)</label>
-                <textarea id="message" required class="contact-field" cols="30" rows="10"></textarea>
+                <textarea id="message" name="message" required class="contact-field" cols="30" rows="10"></textarea>
             </div>
         </div>
         <input type="submit" value="send" class="contact-submit">
