--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
       </h1>
       <p>We organise meetups in Belgium for 👩‍💻 front-end developers and ✍️ web designers who are interested to share experience with theirs peers.</p>
 
-      <form action="" class="cta-form">
-        <label for="cta-text-input" class="cta-label">Get notified when we organise our next meetup →</label>
+      <form action="https://creativefrontend.us20.list-manage.com/subscribe/post" method="POST" class="cta-form">
+        <input type="hidden" name="u" value="6bc34ff93bc04601cdb37cd4f">
+        <input type="hidden" name="id" value="07b53acc94">
+        <label for="cta-email" class="cta-label">Get notified when we organise our next meetup →</label>
         <div class="cta-form-wrapper">
-          <input type="text" id="cta-text-input" placeholder="charles.michel@premier.fed.be" class="cta-text-input">
+          <input type="email" id="cta-email" name="MERGE0" placeholder="charles.michel@premier.fed.be" class="cta-email">
           <input type="submit" value="submit" class="cta-button">
         </div>
         <div class="cta-notice">We won’t share or use your email address for any other purposes, and you can unsubscribe at any time.</div>
