--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Creative Front-end Belgium</title>
-  <meta name="description" content="">
+  <meta name="description" content="Creative Front-end Belgium organises meetups in Belgium for 👩‍💻 front-end developers and ✍️ web designers who are interested to share experience with theirs peers.">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
