Make the code of conduct open in a new tab

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </section>
   <footer class="footer">
     <div class="container">
-      <div>© 2019 <a href="https://github.com/maeligg/creative-frontend-belgium/graphs/contributors">Contributors</a> - All rights reserved - <a href="https://jsconf.com/codeofconduct.html">Code Of Conduct</a></div>
+      <div>© 2019 <a href="https://github.com/maeligg/creative-frontend-belgium/graphs/contributors">Contributors</a> - All rights reserved - <a href="https://jsconf.com/codeofconduct.html" target="_blank" rel="noopener">Code Of Conduct</a></div>
       <div class="footer-links">
         <a href="https://twitter.com/frontendbe" class="footer-link">
           <svg viewBox="0 0 612 612" class="icon">
