--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -28,10 +28,14 @@
       <div class="container">
         <p>All delegates, speakers and volunteers at any Creative Front-end Belgium event are required to agree with the following code of conduct. Organizers will enforce this code throughout the event.</p>
 
-        <h2>The Quick Version</h2>
+        <div class="title-wrapper">
+          <h2>The Quick Version</h2>
+        </div>
         <p>Creative Front-end Belgium is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion (or lack thereof), or technology choices. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference at the discretion of the conference organisers.</p>
 
-        <h2>The Less Quick Version</h2>
+        <div class="title-wrapper">
+          <h2>The Less Quick Version</h2>
+        </div>
         <p>Harassment includes offensive verbal comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, technology choices, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.</p>
         <p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
         <p>If a participant engages in harassing behavior, the conference organizers may take any action they deem appropriate, including warning the offender or expulsion from the conference.</p>
