Update title & descriptions metas

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Creative Front-end Belgium</title>
-  <meta name="description" content="Creative Front-end Belgium organises meetups in Belgium for 👩‍💻 front-end developers and ✍️ web designers who are interested to share experience with theirs peers.">
+  <title>Code Of Conduct - Creative Front-end Belgium</title>
+  <meta name="description" content="Code Of Conduct of the Creative Front-end Belgium events.">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
