Add Fabien & Simon content

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
             <h4>Speakers</h4>
             <ul class="speakers">
               <li>
-                <img src="img/events/CoStationBrussels/teddy200.jpg" alt="Teddy Kishi" />
+                <img src="img/events/CoStationBrussels/FabienBenetou.jpg" alt="Fabien Benetou" />
                 <p>
-                  <a href="#">Teddy Kishi</a> is currently working at BeCode as a coach in web development in general. His passion is to experiment HTML5 behaviors.
+                  <a href="https://twitter.com/utopiah" target="_blank" rel="noopener">Fabien Benetou</a> is a professional prototyper for the European Parliament and UNICEF Innovation Fund. It means he writes the shittiest (sorry!) code you have seen on a machine that is half working and get paid for it! He makes proof of concepts that showcase how emerging technologies could be used. Sometimes it works but often it fails...
                 </p>
               </li>
               <li>
-                <img src="img/events/CoStationBrussels/rafael200.jpg" alt="Rafael Derolez" />
+                <img src="img/events/CoStationBrussels/SimonHenrotte.jpg" alt="Simon Henrotte" />
                 <p>
-                  <a href="#">Rafael Derolez</a> is a young freelance developer that focuses on creative interactions & slick animations.
+                  <a href="https://twitter.com/henrottesimon" target="_blank" rel="noopener">Simon Henrotte</a> is a front end developer, product designer and cloud based employee at Belighted.</p>
                 </p>
               </li>
               <li>
