Update speaker bio

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <li>
                 <img src="img/events/CoStationBrussels/FabienBenetou.jpg" alt="Fabien Benetou" />
                 <p>
-                  <a href="https://twitter.com/utopiah" target="_blank" rel="noopener">Fabien Benetou</a> is a professional prototyper for the European Parliament and UNICEF Innovation Fund. It means he writes the shittiest code you have seen on a machine that is half working and get paid for it! (sorry!)
+                  <a href="https://twitter.com/utopiah" target="_blank" rel="noopener">Fabien Benetou</a> is a professional prototyper for the European Parliament and UNICEF Innovation Fund.  He makes proof of concepts that showcase how emerging technologies could be used. Sometimes it works but often it fails...
                 </p>
               </li>
               <li>
