Add correct EventBrite link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </span>
             </p>
             <p>
-              <a href="https://www.eventbrite.be/e/billets-codepen-meetup-50976316535#" target="_blank" rel="noopener" class="event-register pre-icon">Link to Eventbrite</a>
+              <a href="https://www.eventbrite.be/e/fronteers-codepen-meetup-tickets-55824023156/" target="_blank" rel="noopener" class="event-register pre-icon">Link to Eventbrite</a>
             </p>
           </div>
           <div class="event-details">
