Add new speaker for next Meetup

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
                 </p>
               </li>
               <li>
+                <img src="img/events/CoStationBrussels/SamBellen.jpg" alt="Sam Bellen" />
+                <p>
+                  <a href="https://twitter.com/sambego" target="_blank" rel="noopener">Sam Bellen</a> is a Google Developer Expert who works as a Developer Evangelist at Auth0. At Auth0 we're trying to make authentication and identification as easy as possible, while still keeping it secure.</p>
+                </p>
+              </li>
+              <li>
                 <span class="more">?</span>
                 <p>More to come!</p>
               </li>
