--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
                 </p>
               </li>
               <li>
-                <span class="more">?</span>
-                <p>More to come!</p>
+                <img src="img/events/CoStationBrussels/MaëlBrunet.jpg" alt="Maël Brunet" />
+                <p>
+                  <a href="https://twitter.com/MaelB" target="_blank" rel="noopener">Maël Brunet</a> is a front end developer, working on design systems at Keytrade Bank.</p>
+                </p>
               </li>
             </ul>
           </div>
