Update alt values

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           </p>
         </div>
         <div class="event-photos">
-          <img src="img/events/CoStationBrussels/CodePenMeetup_Brussels.jpg" alt="Pauline Stich on stage" />
-          <img src="img/events/CoStationBrussels/CodePenMeetup_Brussels2.jpg" alt="Audience listening to Simon Ajzenman" />
+          <img src="img/events/CoStationBrussels/CodePenMeetup_Brussels.jpg" alt="Fabien Benetou on stage" />
+          <img src="img/events/CoStationBrussels/CodePenMeetup_Brussels2.jpg" alt="Sam Bellen on stage" />
         </div>
       </article>
       <article class="past-event">
