Restore previous font styles for headings

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif|Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
