--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
           </p>
         </div>
         <div class="event-details">
-          <h4>Speakers</h4>
           <ul class="speakers">
             <li>
               <img src="img/events/Reed/ThomasDiMartino.jpg" alt="Thomas Di Martino" />
@@ -70,9 +69,9 @@
               </p>
             </li>
             <li>
-              <span class="more">?</span>
+              <img src="img/events/Reed/MehdiMerah.jpg" alt="Mehdi Merah" />
               <p>
-                <a href="https://twitter.com/meduzen" target="_blank" rel="noopener">Mehdi Merah</a></p>
+                <a href="https://twitter.com/meduzen" target="_blank" rel="noopener">Mehdi Merah</a> is a freelance front-end developer believing in progressive enhancement and Nintendo.</p>
               </p>
             </li>
             <li>
