Add Thomas talk description

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li>
               <img src="img/events/Reed/ThomasDiMartino.jpg" alt="Thomas Di Martino" />
               <p>
-                Whenever he isn't rewatching a Marvel movie for the sixth time, <a href="https://twitter.com/t_dimartino" target="_blank" rel="noopener">Thomas Di Martino</a> puts his OCD to good use as a Senior Front-End Developer at Reed, where he's been aligning and centering things for a living since 2014.
+                Whenever he isn't rewatching a Marvel movie for the sixth time, <a href="https://twitter.com/t_dimartino" target="_blank" rel="noopener">Thomas Di Martino</a> puts his OCD to good use as a Senior Front-End Developer at Reed, where he's been aligning and centering things for a living since 2014. He will present us an overview of modern masking techniques through real-world examples and their respective pros & cons.
               </p>
             </li>
             <li>
