Add eventbrite link

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                <a href="https://www.google.com/maps/place/Quai+Paul+Verlaine+2,+6000+Charleroi/@50.4079655,4.4378193,16.49z/data=!4m5!3m4!1s0x47c225df9aa44daf:0x669ef6da4d1f1c94!8m2!3d50.406435!4d4.437647">Reed</a><br>Quai Paul Verlaine, 2 6000 Charleroi
             </span>
           </p>
-          <!-- <p>
-            <a href="#" target="_blank" rel="noopener" class="event-register pre-icon">Link to Eventbrite</a>
-          </p> -->
+          <p>
+            <a href="https://www.eventbrite.be/e/74925936493/" target="_blank" rel="noopener" class="event-register pre-icon">Link to Eventbrite</a>
+          </p>
         </div>
         <div class="event-details">
           <ul class="speakers">
