--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
               </p>
             </li>
             <li>
+              <img src="img/events/Reed/LouVerdun.jpg" alt="Lou Verdun" />
+              <p>
+                Front-end developer and wannabe designer in his spare time. <a href="https://twitter.com/LouVerdun" target="_blank" rel="noopener">Lou Verdun</a> likes interactive stuff, moving images and fancy interfaces. If you're into that, he can also talk about climbing.
+              </p>
+            </li>
+            <li>
               <span class="more">?</span>
               <p>More to come!</p>
             </li>
