Add final speaker

--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
               </p>
             </li>
             <li>
-              <span class="more">?</span>
-              <p>More to come!</p>
+              <img src="img/events/Reed/ArnaudDuchemin.jpg" alt="Arnaud Duchemin" />
+              <p>
+                Having previously worked as an analyst at Caterpillar Logistics, Arnaud Duchemin is a freelance developer and coach/developer at <a href="https://www.becode.org/" target="_blank" rel="noopener">BeCode</a> since 2018.
+              </p>
             </li>
           </ul>
         </div>
