Add non-breaking space to avoid the arrow being alone on a single line

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <form action="https://creativefrontend.us20.list-manage.com/subscribe/post" method="POST" class="cta-form">
         <input type="hidden" name="u" value="6bc34ff93bc04601cdb37cd4f">
         <input type="hidden" name="id" value="07b53acc94">
-        <label for="cta-email" class="cta-label">Get notified when we organise our next meetup →</label>
+        <label for="cta-email" class="cta-label">Get notified when we organise our next meetup&nbsp;→</label>
         <div class="cta-form-wrapper">
           <input type="email" id="cta-email" name="MERGE0" placeholder="charles.michel@premier.fed.be" class="cta-email">
           <input type="submit" value="submit" class="cta-button">
