Fix wrong content & link to twitter

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li>
               <img src="img/events/WalkingMen/MathieuMathieu.jpg" alt="Mathieu Delvaux & Mathieu Ferraris" />
               <p>
-                Founder and Creative Lead of NextRide, nextmoov, and Stoomlink, <a target="_blank" rel="noopener" href="https://twitter.com/mathieudelvauxs">Mathieu</a> draws pretty rectangles all day. But he is one of those designers who code as well. Uh… Should
+                Founder and Creative Lead of NextRide, nextmoov, and Stoomlink, <a target="_blank" rel="noopener" href="https://twitter.com/mathieudelvaux">Mathieu</a> draws pretty rectangles all day. But he is one of those designers who code as well. Uh… Should designers code?
               <br/>
               <br/>
                 From Interactive Designer to Pro Gamer to Lead Front End Super Pro XDR Max at nextmoov and Stoomlink, <a target="_blank" rel="noopener" href="https://twitter.com/__rumple">Mat</a> converts those pretty rectangles into fully functional apps.
