Adds new speaker (Sophie)

--- a/index.html
+++ b/index.html
@@ -74,10 +74,16 @@
             <li>
               <img src="img/events/WalkingMen/MathieuMathieu.jpg" alt="Mathieu Delvaux & Mathieu Ferraris" />
               <p>
-                Founder and Creative Lead of NextRide, nextmoov, and Stoomlink, <a target="_blank" rel="noopener" href="https://twitter.com/mathieudelvaux">Mathieu</a> draws pretty rectangles all day. But he is one of those designers who code as well. Uh… Should designers code?
+                Founder and Creative Lead of NextRide, nextmoov, and Stoomlink, <a target="_blank" rel="noopener" href="https://twitter.com/mathieudelvaux">Mathieu Delvaux</a> draws pretty rectangles all day. But he is one of those designers who code as well. Uh… Should designers code?
               <br/>
               <br/>
-                From Interactive Designer to Pro Gamer to Lead Front End Super Pro XDR Max at nextmoov and Stoomlink, <a target="_blank" rel="noopener" href="https://twitter.com/__rumple">Mat</a> converts those pretty rectangles into fully functional apps.
+                From Interactive Designer to Pro Gamer to Lead Front End Super Pro XDR Max at nextmoov and Stoomlink, <a target="_blank" rel="noopener" href="https://twitter.com/__rumple">Mathieu Ferraris</a> converts those pretty rectangles into fully functional apps.
+              </p>
+            </li>
+            <li>
+              <img src="img/events/WalkingMen/Sophie.jpg" alt="Sophie Schuermans" />
+              <p>
+                <a target="_blank" rel="noopener" href="https://twitter.com/sophieschuerman">Sophie Schuermans</a> is a digital accessibility consultant at AnySurfer. She helps people build websites, apps and PDF documents that are usable by everyone, including people with disabilities.
               </p>
             </li>
             <li>
