Add new speaker

--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
               </p>
             </li>
             <li>
-              <span class="more">?</span>
-              <p>More Speakers to be announced soon!</p>
+              <img src="img/events/WalkingMen/Johan.jpg" alt="Sophie Ronsse" />
+              <p>
+                <a target="_blank" rel="noopener" href="https://twitter.com/wolfr_2">Johan Ronsse</a> is co-founder of Mono, a company that specializes in UI design. He aims to balance aesthetics with usability and has a big interest in using code to make design real.
+              </p>
             </li>
           </ul>
         </div>
