--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               </p>
             </li>
             <li>
-              <img src="img/events/WalkingMen/Johan.jpg" alt="Sophie Ronsse" />
+              <img src="img/events/WalkingMen/Johan.jpg" alt="Johan Ronsse" />
               <p>
                 <a target="_blank" rel="noopener" href="https://twitter.com/wolfr_2">Johan Ronsse</a> is co-founder of Mono, a company that specializes in UI design. He aims to balance aesthetics with usability and has a big interest in using code to make design real.
               </p>
